--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,25 +1,34 @@
-name: windows
+name: Setup Self-Hosted Runner with SSH
 
-on: 
-  workflow_dispatch:
-    inputs:
-      authcode:
-        description: 'CRD Code'
-        required: true
-      pincode:
-        description: '6 digit PIN'
-        required: true
-        
+on: [push]
+
 jobs:
-  setup:
-    runs-on: windows-latest
+  setup-self-hosted-ssh:
+    runs-on: self-hosted
+
     steps:
-    - uses: actions/checkout@v2
-    - name: Initializing Setup
-      run: ./setup.ps1
-    - name: NirCMD Setup
-      run: ./prog.bat
-    - name: Starting CRD
-      run: ${{ github.event.inputs.authcode }} -pin=${{ github.event.inputs.pincode }}
-    - name: Keep Alive
-      run: ./timeout.ps1
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Install SSH server
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y openssh-server
+
+    - name: Configure SSH server
+      run: |
+        sudo systemctl enable ssh
+        sudo systemctl start ssh
+        sudo sed -i 's/#Port 22/Port 2222/' /etc/ssh/sshd_config
+        sudo systemctl restart ssh
+
+    - name: Set up SSH key
+      run: |
+        mkdir -p ~/.ssh
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
+
+    - name: Print SSH connection details
+      run: |
+        echo "SSH server is running on port 2222"
+        echo "To connect: ssh -p 2222 ${{ github.actor }}@$(hostname -I | awk '{print $1}')"
